# c3p

./: Cargo.toml  README.md  c3p.cheat
src/: main.rs
