[package]
name = "c3p"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
futures-util = "0.3.28"
kdam = "0.3.0"
reqwest = { version = "0.11.17", features=["stream"]}
url = "2.3.1"
tokio = { version = "1.21.2", features = ["full"] }
