[package]
name = "c3p"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.4.7", features = ["derive"] }
futures-util = "0.3.29"
kdam = { version = "0.5.0", features = ["rich", "spinner"] }
reqwest = { version = "0.11.22", features = ["stream"] }
url = "2.4.1"
aws-config = "0.57.1"
aws-sdk-s3 = "0.35.0"
regex = "1.10.2"
remotefs-ssh = "0.2.1"
remotefs = "0.2.0"
tokio = { version = "1.33.0", features = ["full"] }
